[project]
name = "pocket-link-manager"
version = "0.1.0"
description = "A comprehensive toolkit for extracting, crawling, processing, and managing Pocket saved articles"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Pocket Link Manager"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["database", "extractor", "web", "scripts", "tools"]
